feat: change image-name

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -70,7 +70,7 @@
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
-    background-image: url(/images/7contact_banner.jpg);
+    background-image: url(/images/contact_banner.jpg);
   }
 
   .contact-banner-img {
