--- a/themes/HoomeTheme/layouts/contact/list.html
+++ b/themes/HoomeTheme/layouts/contact/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="contact-banner">
-  <img class="contact-banner-img" src="/images/7contact_banner.jpg" alt="">
+  <img class="contact-banner-img" src="/images/contact_banner.jpg" alt="">
   <div class="contact-banner-desc">
     <p>联系我们</p>
   </div>
