--- a/themes/HoomeTheme/layouts/product/list.html
+++ b/themes/HoomeTheme/layouts/product/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="product-banner">
-  <img class="product-banner-img" src="/images/8product_banner.jpg" alt="">
+  <img class="product-banner-img" src="/images/product_banner.jpg" alt="">
   <div class="product-banner-desc">
     <p>产品展示</p>
   </div>
