--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -203,7 +203,7 @@
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
-    background-image: url(/images/5about_banner.jpg);
+    background-image: url(/images/about_banner1.jpg);
   }
 
   .about-banner-img {
