--- a/themes/HoomeTheme/layouts/about/list.html
+++ b/themes/HoomeTheme/layouts/about/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <div class="about-banner">
-  <img class="about-banner-img" src="/images/5about_banner.jpg" alt="">
+  <img class="about-banner-img" src="/images/about_banner1.jpg" alt="">
   <div class="about-banner-desc">
     <p>关于吉家路米</p>
   </div>
@@ -111,7 +111,7 @@
         <p>深圳吉家路米信息科技有限公司（简称吉家路米）是宁波知名跨境电商公司宁波黑米信息科技有限公司旗下的全资子公司。宁波黑米信息科技有限公司以助力中国消费品牌出海为使命，成立7年以来在庭院家居，灯具，小电器，玩具等领域成功孵化数十个线上品牌。至2022年公司累计员工超200人，年销售金额超10亿，有成熟的运营中心，供应链中心，营销中心，视觉中心，IT中心。目前已与数个投资机构在接洽。<br/>为进一步提升公司竞争力，公司决定把研发设计中心建立在设计之都深圳，为彰显重视性独立成立吉家路米子公司，按公司化进行经营。 
         </p>
         <p>吉家路米前期目标基于公司灯具，小家电，庭院家具家居，玩具等现有产品线进行迭代升级，组织成熟后将对外开展设计工作，包括产品市场调研，产品概念设计，产品造型设计，产品结构设计，手板制作，模具跟踪技术支持，知识产品服务等一站式服务。致力于成为消费品出海品牌领域卓越的产品方案公司，通过创新设计重新消费类产品，向消费者传递美好，让生活更有品质。</p>
-        <img src="/images/6about_banner.jpg" alt="">
+        <img src="/images/about_banner2.jpg" alt="">
       </div>
     </div>
   </div>
