--- a/themes/HoomeTheme/static/css/about.css
+++ b/themes/HoomeTheme/static/css/about.css
@@ -202,7 +202,7 @@
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
-    background-image: url(/images/5about_banner.jpg);
+    background-image: url(/images/about_banner1.jpg);
   }
 
   .about-banner-img {
