--- a/themes/HoomeTheme/static/css/contact.css
+++ b/themes/HoomeTheme/static/css/contact.css
@@ -66,7 +66,7 @@
 @media screen and (min-width: 1200px) {
   .contact-banner {
     height: 300px;
-    background-image: url(/images/7contact_banner.jpg);
+    background-image: url(/images/contact_banner.jpg);
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
