--- a/themes/HoomeTheme/static/css/product.css
+++ b/themes/HoomeTheme/static/css/product.css
@@ -81,7 +81,7 @@
 @media screen and (min-width: 1200px) {
   .product-banner {
     height: 300px;
-    background-image: url(/images/8product_banner.jpg);
+    background-image: url(/images/product_banner.jpg);
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
