feat: change text

--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -1,8 +1,8 @@
 <div class="banner">
   <img class="banner-img-pc" src="/images/index_banner.jpg" alt="">
   <div class="banner-desc">
-    <p class="container">Gigalumi,enrich your life with sharp design</p>
-    <p class="container">创新设计，打造美好生活</p>
+    <p class="container">Unterstützung · Begeisterung · Zustimmung · Vertrauen</p>
+    <p class="container"> 助力·激动·赞同·信赖</p>
   </div>
 </div>
 
@@ -12,7 +12,10 @@
       <img src="/images/index_img1.jpg" alt="">
       <div class="company-profile-desc-cmp">
         <h2>企业简介 </h2>
-        <p>深圳吉家路米信息科技有限公司（简称吉家路米）是宁波知名跨境电商公司宁波黑米信息科技有限公司旗下的全资子公司。宁波黑米信息科技有限公司以助力中国消费品牌出海为使命，成立7年以来在庭院家居，灯具，小电器，玩具等领域成功孵化数十个线上品牌…
+        <p>宁波灏米信息科技有限公司成立于2020年11月06日。
+          从事跨境电商行业。主要产品有制冰机、移动空调、饮水机、饮料柜、冰箱、车载冰箱、取暖器、烘干机、户外工具类等。
+          公司稳定发展，从10人逐渐发展为如今的30人，经营状况良好，且对外投资5家公司。
+          <br/>宁波灏米信息科技有限公司注册的商标信息有ICEHERR、COMMYPET、GOINFIS、CAMPSCAL、FREMELY、CLOUSAPE等7个商标。
         </p>
       </div>
     </div>
