--- a/themes/HoomeTheme/layouts/partials/head.html
+++ b/themes/HoomeTheme/layouts/partials/head.html
@@ -2,8 +2,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>深圳吉家路米信息科技有限公司</title>
-  <meta name="keywords" content="吉家路米,深圳吉家路米,深圳吉家路米信息科技有限公司,宁波黑米,宁波黑米信息科技有限公司">
+  <title>宁波灏米信息科技有限公司</title>
+  <meta name="keywords" content="灏米,宁波灏米,宁波灏米信息科技有限公司,宁波黑米,宁波黑米信息科技有限公司">
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
 
 
