--- a/themes/HoomeTheme/layouts/contact/list.html
+++ b/themes/HoomeTheme/layouts/contact/list.html
@@ -14,21 +14,22 @@
           <i class="iconfont">&#xe61d;</i>
         </div>
         <p class="contact-mode-title">TEL</p>
-        <p class="contact-mode-cont">18668868822</p>
+        <p class="contact-mode-cont">18670705909</p>
       </a>
-      <a href="mailto:paul@gigalumi.cn">
+      <a href="mailto:paul@hoome.cn">
         <div class="contact-mode-icon">
           <i class="iconfont">&#xe673;</i>
         </div>
         <p class="contact-mode-title">E-mail</p>
-        <p class="contact-mode-cont">paul@gigalumi.cn</p>
+        <p class="contact-mode-cont">
+          Euhomy-Smart@hotmail.com</p>
       </a>
       <a>
         <div class="contact-mode-icon">
           <i class="iconfont">&#xe671;</i>
         </div>
         <p class="contact-mode-title">Address</p>
-        <p class="contact-mode-cont">深圳市龙岗区坂田街道2000号有所为大厦B710（华为地铁站D口）</p>
+        <p class="contact-mode-cont">浙江省宁波市江北区望山路247号2-1</p>
       </a>
     </ul>
   </div>
