feat: mobile adaptive

--- a/themes/HoomeTheme/layouts/about/list.html
+++ b/themes/HoomeTheme/layouts/about/list.html
@@ -10,7 +10,7 @@
 <div class="about-content">
   <ul class="about-content-nav">
     <li class="active" style="width: 200px;">公司文化</li>
-    <li style="width: 200px;">公司背景</li>
+    <li style="width: 200px;">公司简介</li>
   </ul>
   <div class="about-content-box show">
     <div class="container">
@@ -107,7 +107,7 @@
   <div class="about-content-box">
     <div class="container">
       <div class="heyme-bg">
-        <h4>公司背景</h4>
+        <h4>公司简介</h4>
         <p style="font-size:medium"><strong>宁波灏米信息科技有限公司</strong>成立于2020年11月06日。
           从事跨境电商行业。主要产品有制冰机、移动空调、饮水机、饮料柜、冰箱、车载冰箱、取暖器、烘干机、户外工具类等。
           <br/>公司稳定发展，从10人逐渐发展为如今的30人，经营状况良好，且对外投资5家公司。 
