--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -1,5 +1,6 @@
 <div class="banner">
   <img class="banner-img-pc" src="/images/index_banner.jpg" alt="">
+  <img class="banner-img-mobile" src="/images/index_banner.jpg" alt="">
   <div class="banner-desc">
     <p class="container">Unterstützung · Begeisterung · Zustimmung · Vertrauen</p>
     <p class="container"> 助力·激动·赞同·信赖</p>
@@ -54,7 +55,7 @@
     <div class="company-rele-content">
       <a class="company-rele-content-item " href="/about">
         <img src="/images/index_img2.jpg" alt="">
-        <p>公司背景</p>
+        <p>公司简介</p>
       </a>
       <a class="company-rele-content-item" href="/about">
         <img src="/images/index_img3.jpg" alt="">
