--- a/themes/HoomeTheme/layouts/partials/header.html
+++ b/themes/HoomeTheme/layouts/partials/header.html
@@ -1,6 +1,7 @@
 <nav id="nav" class="nav-hoome">
-  <a href="/"><img src="/images/hoome.png" class="nav-img" alt="load fail"  class="float-left inline-block py-7 ml-10 " ></a>
+  <a href="/"><img src="/images/hoome.png" class="nav-img-pc" alt="load fail"  class="float-left inline-block py-7 ml-10 " ></a>
   <div class="container">
+    <a href="/"><img src="/images/hoome.png" class="nav-img-mobile" alt="load fail"  class="float-left inline-block py-7 ml-10 " ></a>
     <div></div>
       <ul class="nav-top">
         {{ $menu := .Site.Menus.main }}
