feat: add .site.copyright and .site.params

--- a/themes/HoomeTheme/layouts/partials/footer.html
+++ b/themes/HoomeTheme/layouts/partials/footer.html
@@ -10,7 +10,9 @@
         <dt class="lastdt">联系我们</dt>
         <dd><a href="/contact"><span>联系方式</span></a></dd>
       </dl> 
-    </div>     
+    </div>
+    <p>© <script>document.write("2016-"+new Date().getFullYear());</script> {{ .Site.Copyright}}  版权所有  <a href="{{ .Site.Params.IcpURL }}" target="_blank">{{ .Site.Params.IcpID }}</a>  </p>
+
   </div>
 </footer>
 
