refactor: synchronize the latest code

--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -7,20 +7,19 @@
   </div>
 </div>
 
-<div class="company-profile">
+<div class="company-rele padding-bottom-0">
   <div class="container">
+    <h2>公司简介</h2>
     <div class="company-profile-desc">
       <img src="/images/index_img1.jpg" alt="">
-      <div class="company-profile-desc-cmp">
-        <h2>企业简介 </h2>
-        <p>宁波灏米信息科技有限公司成立于2020年11月06日。
-          从事跨境电商行业。主要产品有制冰机、移动空调、饮水机、饮料柜、冰箱、车载冰箱、取暖器、烘干机、户外工具类等。
-          公司稳定发展，从10人逐渐发展为如今的30人，经营状况良好，且对外投资5家公司。
-          <br/>宁波灏米信息科技有限公司注册的商标信息有ICEHERR、COMMYPET、GOINFIS、CAMPSCAL、FREMELY、CLOUSAPE等7个商标。
+      <div class="company-profile-desc-cmp company-profile-desc-div ">
+        <p>宁波灏米信息科技有限公司成立于2020年，是一家集产销研于一体的专业的跨境消费品品牌运营公司，创始团队从2016年开始跨境品牌领域创业，至今已拥有行业顶尖的品牌运营体系。公司团队核心成员从创业至今有近10个跨境线上消费品牌成功打造经验，品牌年销售额达10亿人民币。
+          公司办公场地2000平，员工近百人，当前灏米科技以家用冰相关设备和产品为核心，辐射小家电品类，致力于通过研发和设计，为全球消费者创造健康，环保，节能的产品，传递酷爽的生活态度，三年愿景成为全球线上制储冰品类第一。
+          <br/>公司有完整的产品方案，产品设计，品牌营销，线上多渠道运营体系和培训体系，有丰富的行业资源和欧美本地化团队，有大学校内合作平台支撑产销研项目。
         </p>
       </div>
     </div>
-    <ul class="company-profile-fun">
+    <ul class="company-profile-fun company-rele padding-bottom-0">
       <li>
         <div class="company-profile-fun-icon">
           <i class="iconfont">&#xe606;</i>
@@ -55,11 +54,11 @@
     <div class="company-rele-content">
       <a class="company-rele-content-item " href="/about">
         <img src="/images/index_img2.jpg" alt="">
-        <p>公司简介</p>
-      </a>
-      <a class="company-rele-content-item" href="/about">
-        <img src="/images/index_img3.jpg" alt="">
         <p>公司文化</p>
+      </a>
+      <a class="company-rele-content-item" href="/product">
+        <img src="/images/index_img3.jpg" alt="">
+        <p>产品展示</p>
       </a>
     </div>
   </div>
