--- a/themes/HoomeTheme/layouts/partials/footer.html
+++ b/themes/HoomeTheme/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <div class="footer-nav">
+    <div class="footer-nav" style="display:none;" >
       <dl>
         <dt>关于我们</dt>
         <dd><a href="/about"><span>企业文化</span></a></dd>
