--- a/themes/HoomeTheme/layouts/partials/head.html
+++ b/themes/HoomeTheme/layouts/partials/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>宁波灏米信息科技有限公司</title>
   <meta name="keywords" content="灏米,宁波灏米,宁波灏米信息科技有限公司,宁波黑米,宁波黑米信息科技有限公司">
+  <link rel="shortcut icon" href="/images/hoome_icon.ico">
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
 
 
