--- a/themes/HoomeTheme/layouts/about/list.html
+++ b/themes/HoomeTheme/layouts/about/list.html
@@ -8,21 +8,20 @@
 </div>
 
 <div class="about-content">
-  <ul class="about-content-nav">
-    <li class="active" style="width: 200px;">公司文化</li>
-    <li style="width: 200px;">公司简介</li>
-  </ul>
   <div class="about-content-box show">
     <div class="container">
-      <div class="heyme-culture" >
-        <h4>灏米文化</h4>
-        <p style="font-size:14px; color:black">make better lives with innovative design
+      <div class="heyme-culture" style="padding-bottom: 40px;" >
+        <h4>公司使命</h4>
+        <p>灏米科技致力于在全球市场塑造小家电品牌，通过不断创新将富有设计美感的产品带向全球消费者，创新智造让生活更美好。
         </p>
-        <p style="font-size:16px;font-weight:700;color:black">创新设计让生活更美好
+        <h4>公司愿景</h4>
+        <p>制储冰品牌成为全球家用冰设备品类第一，并具备持续的品牌塑造能力，成为全球性消费品品牌矩阵组织。
         </p>
-        <p style="font-size:14px;color:black">Provide excellent product solutions to build an outstanding overseas brand
+        <h4>公司口号</h4>
+        <p>KEEP LIFE COOL!
         </p>
-        <p style="font-size:16px;font-weight:700;color:black">成为消费品出海品牌领域卓越的产品方案公司
+        <h4>品牌价值观</h4>
+        <p>健康，环保，节能，酷爽
         </p>
       </div>
       <div class="heyme-value overflow">
