feat: change new part style

--- a/themes/HoomeTheme/static/css/index.css
+++ b/themes/HoomeTheme/static/css/index.css
@@ -35,8 +35,16 @@
 .company-profile {
   padding: 0.6rem 0;
 }
-.padding-bottom-0 {
-  padding-bottom: 0 !important;
+
+.company-profile-ul {
+  background-color: #f0f0f0 !important;
+  padding: 50px 0 !important;
+  margin-top: 75px;
+}
+
+.company-profile-li {
+  background-color: #f0f0f0 !important;
+  padding: 20px 0 20px 0 !important;
 }
 
 .company-profile-desc img {
@@ -56,6 +64,7 @@
 
 .company-profile-desc-cmp p {
   font-size: 0.24rem;
+  text-indent: 2em;
 }
 
 .company-profile-fun {
@@ -409,7 +418,7 @@
 
   .company-profile-desc img {
     display: block;
-    width: 266px;
+    width: 8.5rem;
     margin-right: 40px;
   }
 
@@ -435,6 +444,7 @@
 
   .company-profile-desc-cmp p {
     font-size: 14px;
+    padding: 15px 0;
   }
 
   .company-profile-fun {
@@ -456,6 +466,10 @@
   }
   .company-profile-fun li p {
     font-size: 16px;
+  }
+
+  .company-profile-padding {
+    padding-bottom: 0px !important;
   }
 
   .industry-info h2,
@@ -604,5 +618,11 @@
     align-content: center;
     flex-wrap: wrap;
     padding: 0 20px 40px 20px;
+  }
+
+  .company-profile-ul {
+    background-color: #f0f0f0 !important;
+    padding: 50px 0 !important;
+    margin-top: 75px;
   }
 }
