style: modify address

--- a/themes/HoomeTheme/layouts/contact/list.html
+++ b/themes/HoomeTheme/layouts/contact/list.html
@@ -29,7 +29,7 @@
           <i class="iconfont">&#xe671;</i>
         </div>
         <p class="contact-mode-title">Address</p>
-        <p class="contact-mode-cont">浙江省宁波市江北区望山路247号2-1</p>
+        <p class="contact-mode-cont">宁波江北区前洋e商小镇北区2号楼602室</p>
       </a>
     </ul>
   </div>
