feat: modify product image

--- a/themes/HoomeTheme/layouts/product/list.html
+++ b/themes/HoomeTheme/layouts/product/list.html
@@ -12,7 +12,7 @@
       <li class="link">电动工具</li>
       <li class="link">家用冰箱</li>
       <li class="link">制冰机</li>
-      <li class="link">移动空调</li>
+      <li class="link">烘干机</li>
     </ul>
     <div class="con-right">
       <div id="content-right">
@@ -22,6 +22,9 @@
           <li><img src="/images/car_refrigerator/2.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/car_refrigerator/3.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/car_refrigerator/4.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/car_refrigerator/5.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/car_refrigerator/6.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/car_refrigerator/7.jpg" alt="" class="container-box-image"></li>
         </ul>
         <ul class="hide container-box">
           <li><img src="/images/electrical_tools/1.jpg" alt="" class="container-box-image"></li>
@@ -29,16 +32,19 @@
           <li><img src="/images/electrical_tools/3.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/electrical_tools/4.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/electrical_tools/5.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/6.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/7.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/8.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/9.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/10.jpg" alt="" class="container-box-image"></li>
           </ul>
           <ul class="hide container-box">
           <li><img src="/images/household_refrigerator/1.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/household_refrigerator/2.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/household_refrigerator/3.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/4.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/5.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/6.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/7.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/8.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/9.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/10.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/household_refrigerator/11.jpg" alt="" class="container-box-image"></li>
         </ul>
         <ul class="hide container-box">
           <li><img src="/images/ice_machine/1.jpg" alt="" class="container-box-image"></li>
@@ -49,6 +55,11 @@
           <li><img src="/images/ice_machine/6.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/ice_machine/7.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/ice_machine/8.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/ice_machine/9.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/ice_machine/10.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/ice_machine/11.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/ice_machine/12.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/ice_machine/13.jpg" alt="" class="container-box-image"></li>
         </ul>
         <ul class="hide container-box">
           <li><img src="/images/mobile_air_condition/1.jpg" alt="" class="container-box-image"></li>
