fix: modify product image

--- a/themes/HoomeTheme/layouts/product/list.html
+++ b/themes/HoomeTheme/layouts/product/list.html
@@ -24,11 +24,11 @@
           <li><img src="/images/car_refrigerator/4.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/car_refrigerator/5.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/car_refrigerator/6.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/car_refrigerator/7.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/car_refrigerator/7.png" alt="" class="container-box-image"></li>
         </ul>
         <ul class="hide container-box">
-          <li><img src="/images/electrical_tools/1.jpg" alt="" class="container-box-image"></li>
-          <li><img src="/images/electrical_tools/2.jpg" alt="" class="container-box-image"></li>
+          <li><img src="/images/electrical_tools/1.png" alt="" class="container-box-image"></li>
+          <li><img src="/images/electrical_tools/2.png" alt="" class="container-box-image"></li>
           <li><img src="/images/electrical_tools/3.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/electrical_tools/4.jpg" alt="" class="container-box-image"></li>
           <li><img src="/images/electrical_tools/5.jpg" alt="" class="container-box-image"></li>
