--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -66,4 +66,12 @@
       </a>
     </div>
   </div>
+  <div class="container">
+    <h2>人才相关</h2>
+    <div class="company-rele-content">
+      <a class="company-rele-content-item ">
+        <img src="/images/index_img4.jpg" alt="">
+      </a>
+    </div>
+  </div>
 </div>
