--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -68,8 +68,8 @@
   </div>
   <div class="container">
     <h2>人才相关</h2>
-    <div class="company-rele-content">
-      <a class="company-rele-content-item ">
+    <div class="talents-rele-content">
+      <a class="talents-rele-content-item">
         <img src="/images/index_img4.jpg" alt="">
       </a>
     </div>
