--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -578,6 +578,8 @@
     font-size: 16px;
   }
   .talents-rele-content-item img {
-    width: 50%;
+    display: block;
+    width: 320px;
+    height: 426.6666666px;
   }
 }
