--- a/themes/HoomeTheme/layouts/partials/content.html
+++ b/themes/HoomeTheme/layouts/partials/content.html
@@ -70,7 +70,7 @@
     <h2>人才相关</h2>
     <div class="company-rele-content">
       <a class="company-rele-content-item">
-        <img id="talents-rele-content" src="/images/index_img4.jpg" alt="">
+        <img style="width: 50%;" src="/images/index_img4.jpg" alt="">
       </a>
     </div>
   </div>
