docs: modify some word

--- a/themes/HoomeTheme/layouts/about/list.html
+++ b/themes/HoomeTheme/layouts/about/list.html
@@ -12,16 +12,10 @@
     <div class="container">
       <div class="heyme-culture" style="padding-bottom: 40px;" >
         <h4>公司使命</h4>
-        <p>灏米科技致力于在全球市场塑造小家电品牌，通过不断创新将富有设计美感的产品带向全球消费者，创新智造让生活更美好。
+        <p>助力中国消费品牌享誉全球
         </p>
         <h4>公司愿景</h4>
-        <p>制储冰品牌成为全球家用冰设备品类第一，并具备持续的品牌塑造能力，成为全球性消费品品牌矩阵组织。
-        </p>
-        <h4>公司口号</h4>
-        <p>KEEP LIFE COOL!
-        </p>
-        <h4>品牌价值观</h4>
-        <p>健康，环保，节能，酷爽
+        <p>具备持续的品牌塑造能力，成为全球性消费品牌矩阵组织
         </p>
       </div>
       <div class="heyme-value overflow">
