style: modify container

--- a/themes/HoomeTheme/layouts/contact/list.html
+++ b/themes/HoomeTheme/layouts/contact/list.html
@@ -14,7 +14,7 @@
           <i class="iconfont">&#xe61d;</i>
         </div>
         <p class="contact-mode-title">TEL</p>
-        <p class="contact-mode-cont">18670705909</p>
+        <p class="contact-mode-cont">+86-18368222445</p>
       </a>
       <a href="mailto:paul@hoome.cn">
         <div class="contact-mode-icon">
@@ -22,7 +22,7 @@
         </div>
         <p class="contact-mode-title">E-mail</p>
         <p class="contact-mode-cont">
-          Euhomy-Smart@hotmail.com</p>
+          gavin@hoomenology.com</p>
       </a>
       <a>
         <div class="contact-mode-icon">
